@@ -367,13 +367,14 @@ pm-trace-astatine-211=Trace astatine-211
 pm-mixed-astatine-magneto-orbital-trap=Mixed astatine magneto orbital trap
 pm-cadnium-sulfate=Cadnium sulfate
 
-automation-science-pack=Transition Metal pack
-logistic-science-pack=Advanced Transition Metal pack
-pm-advanced-advanced-transition-metal-science-pack=Advanced-Advanced Transition Metal pack
-chemical-science-pack=Reactive Non-metals pack
-pm-post-transition-metal-science-pack=Post Transition metal pack
+automation-science-pack=Transition metal pack
+logistic-science-pack=Advanced Transition metal pack
+pm-advanced-advanced-transition-metal-science-pack=Advanced-advanced transition metal pack
+chemical-science-pack=Reactive non-metals pack
+pm-post-transition-metal-science-pack=Post transition metal pack
 pm-alkali-metal-science-pack=Alkali metal pack
 pm-metalloid-science-pack=Metalloid pack
+pm-alkaline-earth-metal-science-pack=Alkaline earth metal science pack
 pm-agility-bio-module=Agility Bio-module
 pm-health-bio-module=Health Bio-module
 pm-strength-bio-module=Strength Bio-module
